k8s/rest-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: restaurant-site
  namespace: restaurant

spec:
  replicas: 2

  selector:
    matchLabels:
      app: restaurant-site

  template:
    metadata:
      labels:
        app: restaurant-site

    spec:
      containers:
      - name: restaurant-site
        image: amadii/restaurant-site:v2
        imagePullPolicy: Always

        ports:
        - containerPort: 80
