k8s/rest-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: restaurant-service
  namespace: restaurant

spec:
  selector:
    app: restaurant-site

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
