k8s/restaurant-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: restaurant-httproute
  namespace: restaurant
spec:
  parentRefs:
  - name: restaurant-gateway
    namespace: nginx-gateway
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: restaurant-service
      namespace: restaurant
      port: 80
